k8s/patient-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: patient
  template:
    metadata:
      labels:
        app: patient
    spec:
      containers:
      - name: patient
        image: REGION-docker.pkg.dev/PROJECT/healthcare-repo/patient:latest
        ports:
        - containerPort: 3000
